syntax = "proto3";
package blog;
option go_package = "grpcLearning/blog/proto";

import "google/protobuf/empty.proto";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message BlogId {
    string id = 1;
}


service BlogService {
    rpc createBlog (Blog ) returns (BlogId);
    rpc readBlog (BlogId) returns (Blog);
    rpc updateBlog (Blog) returns (google.protobuf.Empty);
    rpc deleteBlog (BlogId) returns (google.protobuf.Empty );
    rpc listBlogs (google.protobuf.Empty) returns (stream Blog);
}